# Molvector

./: .gitignore  molvector_avogadro.py  molvector_gui.py  molvector_render.py  pyproject.toml
molvector/: __init__.py  gui.py  render.py
test_files/: C11H7_InputNb.com  C11H7_NormalMode.txt  C13_cation_ccs_CM5.txt  C9H8_input.com
