[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "molvector"
version = "1.0.0"
description = "Interactive 3D Molecule Viewer and Builder"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.21",
    "svgwrite",
    "PyQt6>=6.5",
    "mol_strudel",
]

[project.optional-dependencies]
spectra = ["matplotlib"]
openbabel = ["openbabel"]

[project.urls]
Homepage = "https://github.com/CorentinRossi/Molvector"

[project.scripts]
molvector = "molvector:main"

[tool.setuptools.packages.find]
include = ["molvector*"]

[tool.setuptools.package-data]
molvector = ["assets/**/*"]

[tool.setuptools]
zip-safe = false
